# gst-debugger

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  gst-debugger.doap  meson.build  meson_options.txt
po/: LINGUAS  POTFILES.in  POTFILES.skip  cs.po  da.po  de.po  el.po  es.po  eu.po  fur.po  hi.po  hr.po  hu.po  id.po  ka.po  meson.build  pl.po  pt.po  pt_BR.po  ro.po  sl.po  sr.po  sr@latin.po  sv.po  uk.po  zh_CN.po
src/: CMakeLists.txt  Makefile.am  meson.build
src/common/: Makefile.am  common.h  deserializer.c  deserializer.h  gst-utils.c  gst-utils.h  gstdebugger.pb-c.c  gstdebugger.pb-c.h  gstdebugger.proto  libgst-debugger-common.pc.in  libgstdebugger-common.pc.in  meson.build  protocol-utils.c  protocol-utils.h  serializer.c  serializer.h
src/console-client/: CMakeLists.txt  main.cpp
src/debugserver/: CMakeLists.txt  Makefile.am  gstdebugserver.c  gstdebugserver.h  gstdebugserverbuffer.c  gstdebugserverbuffer.h  gstdebugserverevent.c  gstdebugserverevent.h  gstdebugserverfactory.c  gstdebugserverfactory.h  gstdebugserverhooks.c  gstdebugserverhooks.h  gstdebugserverlog.c  gstdebugserverlog.h  gstdebugservermessage.c  gstdebugservermessage.h  gstdebugserverqe.c  gstdebugserverqe.h  gstdebugservertcp.c  gstdebugservertcp.h  gstdebugservertopology.c  gstdebugservertopology.h  gstdebugservertypes.c  gstdebugservertypes.h  gstdebugserverutils.c  gstdebugserverutils.h  gstdebugserverwatcher.c  gstdebugserverwatcher.h  meson.build
src/debugserver/.deps/: libgstcoretracers_la-debugserver-protocol.pb.Plo  libgstcoretracers_la-gstdebugserver.Plo
src/graphviz-plugin/: CMakeLists.txt  Makefile.am  graphviz-gstdebugger.h  gvdevice_gstdebugger.c  gvplugin_gstdebugger.c
src/gst-debugger/: CMakeLists.txt  Makefile.am  common_model_columns.h  connection_properties_dialog.cpp  connection_properties_dialog.h  frame_receiver.h  gst-debugger-resources.xml  gst_buffer_module.cpp  gst_buffer_module.h  gst_debugger_tcp_client.cpp  gst_debugger_tcp_client.h  gst_enum_container.cpp  gst_enum_container.h  gst_event_module.cpp  gst_event_module.h  gst_log_module.cpp  gst_log_module.h  gst_message_module.cpp  gst_message_module.h  gst_properties_module.cpp  gst_properties_module.h  gst_qe_module.cpp  gst_qe_module.h  gst_query_module.cpp  gst_query_module.h  gstdebugger.pb.cc  gstdebugger.pb.h  main.cpp  main_window.cpp  main_window.h  meson.build  sigc++lambdahack.h  ui_utils.cpp  ui_utils.h
src/gst-debugger/addins/: addins-interface.h  addins-notifier.h
src/gst-debugger/controller/: addins_controller.cpp  addins_controller.h  base_controller.h  command_factory.cpp  command_factory.h  connection_controller.h  controller.cpp  controller.h  element_path_processor.h  iview.h  tcp_client.cpp  tcp_client.h  topology_controller.cpp  topology_controller.h
src/gst-debugger/dialogs/: buffer_data_dialog.cpp  buffer_data_dialog.h  connection_properties_dialog.cpp  enums_dialog.cpp  enums_dialog.h  factories_dialog.cpp  factories_dialog.h  klasses_dialog.cpp  klasses_dialog.h  remote_data_dialog.h
src/gst-debugger/filter-parser/: expression.h  lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.cpp  tokens.h
src/gst-debugger/graphviz-plugin/: gvdevice_gstdebugger.c
src/gst-debugger/gvalue-converter/: CMakeLists.txt  gvalue_base.cpp  gvalue_base.h  gvalue_boolean.cpp  gvalue_boolean.h  gvalue_caps.cpp  gvalue_caps.h  gvalue_enum.cpp  gvalue_enum.h  gvalue_flags.cpp  gvalue_flags.h  gvalue_numeric.cpp  gvalue_numeric.h  gvalue_string.cpp  gvalue_string.h  gvalue_unknown.cpp  gvalue_unknown.h
src/gst-debugger/models/: gst_enum_model.cpp  gst_enum_model.h  gst_factory_model.cpp  gst_factory_model.h  gst_klass_model.h  gst_pipeline_model.cpp  gst_pipeline_model.h  remote_data_container.h
src/gst-debugger/modules/: base_main_module.cpp  base_main_module.h  buffer_module.cpp  buffer_module.h  bus_messages_module.cpp  bus_messages_module.h  control_module.h  event_module.cpp  event_module.h  filter_utils.cpp  filter_utils.h  gst_buffer_module.cpp  gst_buffer_module.h  gst_event_module.cpp  gst_event_module.h  gst_log_module.cpp  gst_log_module.h  gst_message_module.cpp  gst_message_module.h  gst_properties_module.cpp  gst_properties_module.h  gst_qe_module.cpp  gst_qe_module.h  gst_query_module.cpp  gst_query_module.h  log_module.cpp  log_module.h  main_module.cpp  main_module.h  message_module.cpp  message_module.h  pad_data_modules.cpp  pad_data_modules.h  pad_path_control_module.cpp  pad_path_control_module.h  pad_path_types_control_module.h  qe_control_module.h  query_module.cpp  query_module.h  types_control_module.cpp  (+1 more)
src/gst-debugger/pipeline-drawer/: graph_elements.h  graph_module.cpp  graph_module.h  gst_bin_to_dot_converter.cpp  gst_bin_to_dot_converter.h
src/gst-debugger/ui/: gst-debugger-dialogs.glade  gst-debugger.glade  gst-debugger.glade~
src/protocol/: CMakeLists.txt  Makefile.am  common.h  deserializer.c  deserializer.h  gstdebugger.proto  protocol_utils.c  protocol_utils.h  serializer.c  serializer.h
src/tests/: CMakeLists.txt  main.cpp  serializer-test.cpp
src/utils/: CMakeLists.txt  Makefile.am  buffer-prepare-utils.h  gst-utils.c  gst-utils.h  serializer.c
tools/: generate-proto.py
