noinst_LTLIBRARIES = libgvplugin-gstdebugger.la
libgvplugin_gstdebugger_la_SOURCES = gvdevice_gstdebugger.c gvplugin_gstdebugger.c
libgvplugin_gstdebugger_la_LDFLAGS = $(CGRAPH_LIBS) $(GVC_LIBS) $(GTK_LIBS) -lX11
libgvplugin_gstdebugger_la_CFLAGS = $(CGRAPH_CFLAGS) $(GVC_CFLAGS) $(GSTREAMER_CFLAGS) $(GTK_CFLAGS)
