proto_src_path = join_paths(meson.current_source_dir(), '..', 'common')
protoc_gen = generator(find_program('protoc'),
    output    : ['@BASENAME@.pb.cc', '@BASENAME@.pb.h'],
    arguments : ['--proto_path=' + proto_src_path, '--cpp_out=@BUILD_DIR@', join_paths(proto_src_path, 'gstdebugger.proto')])

protoc_gen_src = protoc_gen.process(join_paths(proto_src_path, 'gstdebugger.proto'))

gstd_resources = gnome.compile_resources(
    'gst-debugger-resources', 'gst-debugger-resources.xml',
    source_dir : '.',
    c_name : 'gst_debugger')

gst_debugger_sources = [
    'main.cpp',
    'main_window.cpp',
    'main_window.h',
    'controller/controller.cpp',
    'controller/controller.h',
    'controller/command_factory.cpp',
    'controller/command_factory.h',
    'ui_utils.cpp',
    'ui_utils.h',
    gstd_resources,
    'controller/base_controller.h',
    'controller/connection_controller.h',
    'controller/tcp_client.cpp',
    'controller/tcp_client.h',
    'controller/addins_controller.cpp',
    'controller/addins_controller.h',
    'dialogs/connection_properties_dialog.cpp',
    'dialogs/connection_properties_dialog.h',
    'dialogs/remote_data_dialog.h',
    'modules/control_module.h',
    'modules/base_main_module.cpp',
    'modules/base_main_module.h',
    'modules/log_module.cpp',
    'modules/log_module.h',
    'modules/main_module.cpp',
    'modules/main_module.h',
    'controller/iview.h',
    'controller/topology_controller.cpp',
    'controller/topology_controller.h',
    'common_model_columns.h',
    'modules/message_module.cpp',
    'modules/message_module.h',
    'models/gst_enum_model.h',
    'models/gst_factory_model.cpp',
    'models/gst_factory_model.h',
    'models/gst_pipeline_model.cpp',
    'models/gst_pipeline_model.h',
    'modules/event_module.cpp',
    'modules/event_module.h',
    'modules/query_module.cpp',
    'modules/query_module.h',
    'pipeline-drawer/graph_module.cpp',
    'pipeline-drawer/graph_module.h',
    'pipeline-drawer/gst_bin_to_dot_converter.cpp',
    'pipeline-drawer/gst_bin_to_dot_converter.h',
    'graphviz-plugin/graphviz-gstdebugger.h',
    'graphviz-plugin/gvdevice_gstdebugger.c',
    'graphviz-plugin/gvplugin_gstdebugger.c',
    'controller/element_path_processor.h',
    'modules/qe_control_module.h',
    'dialogs/enums_dialog.cpp',
    'dialogs/enums_dialog.h',
    'dialogs/buffer_data_dialog.cpp',
    'dialogs/buffer_data_dialog.h',
    'dialogs/factories_dialog.cpp',
    'dialogs/factories_dialog.h',
    'modules/gst_properties_module.cpp',
    'modules/gst_properties_module.h',
    'modules/buffer_module.cpp',
    'modules/buffer_module.h',
    'models/gst_klass_model.h',
    'dialogs/klasses_dialog.h',
    'dialogs/klasses_dialog.cpp',
    'gvalue-converter/gvalue_base.cpp',
    'gvalue-converter/gvalue_base.h',
    'gvalue-converter/gvalue_unknown.cpp',
    'gvalue-converter/gvalue_unknown.h',
    'gvalue-converter/gvalue_numeric.cpp',
    'gvalue-converter/gvalue_numeric.h',
    'gvalue-converter/gvalue_boolean.cpp',
    'gvalue-converter/gvalue_boolean.h',
    'gvalue-converter/gvalue_caps.cpp',
    'gvalue-converter/gvalue_caps.h',
    'gvalue-converter/gvalue_string.cpp',
    'gvalue-converter/gvalue_string.h',
    'gvalue-converter/gvalue_enum.cpp',
    'gvalue-converter/gvalue_enum.h',
    'gvalue-converter/gvalue_flags.cpp',
    'gvalue-converter/gvalue_flags.h',
    'addins/addins-interface.h',
    'addins/addins-notifier.h']

exe_name = '@0@-@1@'.format('gst-debugger', apiversion)
executable(
    exe_name,
    gst_debugger_sources,
    protoc_gen_src,
    include_directories : config_inc_dir,
    install : true,
    dependencies : [
        gtkmm_dep,
        gstmm_dep,
        gstdebugger_common_dep,
        gvc_dep,
        x11_dep,
        thread_dep,
        boost_dep,
        protobuf_dep])
